--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
         &nbsp;&nbsp;|&nbsp;&nbsp;
         <%= link_to 'Log Out', session_path('dummy'), method: :delete %>
       <% else %>
-        <%= link_to 'Log In', login_path %>
-        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <!--<%= link_to 'Log In', login_path %>
+        &nbsp;&nbsp;|&nbsp;&nbsp; -->
         <%= link_to 'Sign Up', new_user_path %>
       <% end %>
     </p>
