link add new entry page

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -28,6 +28,7 @@
     <div class='right_panel'>
 
         <div class='right_panel-top'>
+        <a class='button' href='/entries/new'> Add Entry </a>
 
         </div>
 
