--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,32 +16,26 @@
 .flex-container {
     display: flex;
     flex-direction: row;
+    background-color: #D3D3D3;
+    height: 840px;
+    padding-right: 5px;
+}
+
+p {
+    font-size: 15px;
+    font-family: 'Gochi Hand', cursive;
 }
 
 .left_panel {
     width: 20%;
-    background-color: gray;
     height: 800px;
-}
-
-.right_panel {
-    width: 80%;
-    height: 800px%;
-}
-
-.goals_panel {
-    height: 400px;
-    background-color: green;
-}
-
-.priorities_panel {
-    height: 300px;
-    background-color: pink;
 }
 
 .right_panel {
     display: flex;
     flex-direction: column;
+    width: 80%;
+    height: 800px;
 }
 
 .right_panel-top {
@@ -51,36 +45,174 @@
 }
 
 .top_right_panel-one {
-    background-color: purple;
+    display: flex;
+    flex-direction: row;
+    margin-left: 220px;
 }
 
 .top_right_panel-two {
-    background-color: lightblue;
+    /* background-color: lightblue;
     width: 400px;
+    margin-left: 200px; */
+}
+
+.date_panel {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+}
+
+.week_of_panel {
+    text-align: center;
+}
+
+.current_week_panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.left_arrow_panel, .right_arrow_panel {
+    margin: 50px;
 }
 
 
 .right_panel-middle {
     height: 440px;
-    background-color: white;
     display: flex;
     flex-direction: row;
 }
 
 .sunday_panel, .monday_panel, .tuesday_panel, .wednesday_panel, .thursday_panel, .friday_panel, .saturday_panel {
     width: 14.5%;
-    background-color: orange;
+    background-color: #F6F4F4;
+    border-radius: 25px;
+    text-align: center;
+    margin: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}    
+
+.goals_panel, .priorities_panel {
+    border-radius: 25px;
+    background-color: #F6F4F4;
+    margin: 10px;
+    text-align: center; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+}
+
+.goals_panel {
+    height: 400px;
+}
+
+.priorities_panel {
+    height: 300px;
+}
+
+
+.work-to-do_panel, .personal-to-do_panel, .ideas_panel, .notes_panel {
+    width: 25%;
+    border-radius: 25px;
+    background-color: white;
+    margin: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}   
+
+.entries_panel-goals {
+    margin-top: -220px;
+}
+
+.entries_panel-priorities {
+    margin-top: -150px;
+}
+
+.entries_panel-categories {
+    height: 150px; 
+}
+
+.entries_panel-days {
+    height: 350px;
+}
+
+.form_panel {
+    margin-bottom: 10px;
 }
 
 .right_panel-bottom {
     height: 230px;
-    background-color: peachpuff;
+    display: flex;
+    flex-direction: row;
+}    
+
+h1 {
+    font-family: 'Sigmar One', cursive;
+}    
+
+h2 {
+    font-family: 'Cutive', serif;
+}    
+
+nav {
+    background-color: #F5F4F4;
+    height: 30px;
+}    
+
+.month_text {
+    font-family: 'Fontdiner Swanky', cursive;
+    font-size: 40px;
+    text-align: center;
+    letter-spacing: 2px;
+    margin-top: 2px;
+
+}    
+
+.month_panel {
+    padding: -2px;
+    height: 40px; 
+}    
+
+
+.day_word_panel {
+    border-bottom: 1px dashed gray;
     display: flex;
     flex-direction: row;
 }
 
-.work-to-do_panel, .personal-to-do_panel, .ideas_panel, .notes_panel {
-    width: 25%;
-    background-color: peachpuff;
+.category_word_panel {
+    text-align: center;
+    border-bottom: 1px dashed gray;
+    margin: 4px;   
+    padding-top: 10px;   
 }
 
+
+.days {
+    margin-top: -2px;
+    margin-bottom: -2px;
+    font-size: 20px;
+    text-align: right;
+}
+
+.category_text {
+    margin: 2px;
+    font-size: 25px;
+}
+
+.category_text-personal {
+    margin: 2px;
+    font-size: 23px;
+}
+
+.date_container {
+    margin: 10px;    
+}
+
+.day_container {
+    margin-left: 20px; 
+}
