edit/delete functionality

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -15,7 +15,8 @@
             <div class='entries_panel-goals'>
                 <% entries = @entries.select {|e| e.category.name == 'goal'} %>
                 <% entries.each do |e| %>
-                <p><%= e.content %> </p>
+                <p><%= e.content %> <%= link_to 'Edit', edit_entry_path(e, offset: @offset) %> <%= link_to 'X', entry_path(e, offset: @offset), method: :delete %> </p>
+                
                 <% end %>
             </div>
 
@@ -65,6 +66,7 @@
         <div class='right_panel-top'>
             <div class='top_right_panel-one'>
                 <div class='left_arrow_panel'>
+                    <%= link_to '<<', entries_path(offset: @offset - 5) %>
                     <%= link_to '<', entries_path(offset: @offset - 1) %>
                 </div>
 
@@ -89,11 +91,11 @@
 
                 <div class='right_arrow_panel'>
                     <%= link_to '>', entries_path(offset: @offset + 1) %>
+                    <%= link_to '>>', entries_path(offset: @offset + 4) %>
                 </div>
             </div>
 
             <div class='top_right_panel-two'>
-
             </div>
 
         </div>
