--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 .flex-container {
     display: flex;
     flex-direction: row;
-    background-color: #D3D3D3;
+    background-color: #F3F3F3;
     height: 840px;
     padding-right: 5px;
 }
@@ -24,6 +24,7 @@
 p {
     font-size: 15px;
     font-family: 'Gochi Hand', cursive;
+    background-color: white;
 }
 
 .left_panel {
@@ -85,8 +86,7 @@ p {
 
 .sunday_panel, .monday_panel, .tuesday_panel, .wednesday_panel, .thursday_panel, .friday_panel, .saturday_panel {
     width: 14.5%;
-    background-color: #F6F4F4;
-    border-radius: 25px;
+    background-color: #D5D4D4;
     text-align: center;
     margin: 3px;
     display: flex;
@@ -96,7 +96,7 @@ p {
 
 .goals_panel, .priorities_panel {
     border-radius: 25px;
-    background-color: #F6F4F4;
+    background-color: #D5D4D4;
     margin: 10px;
     text-align: center; 
     display: flex;
@@ -116,7 +116,7 @@ p {
 .work-to-do_panel, .personal-to-do_panel, .ideas_panel, .notes_panel {
     width: 25%;
     border-radius: 25px;
-    background-color: white;
+    background-color: #D5D4D4;
     margin: 10px;
     text-align: center;
     display: flex;
@@ -125,7 +125,6 @@ p {
 }   
 
 .entries_panel-goals {
-    margin-top: -220px;
 }
 
 .entries_panel-priorities {
@@ -159,8 +158,10 @@ h2 {
 }    
 
 nav {
-    background-color: #F5F4F4;
+    background-color: rgb(213, 212, 212, .5);
     height: 30px;
+    text-align: right;
+    padding-right: 20px;
 }    
 
 .month_text {
@@ -188,7 +189,6 @@ nav {
     text-align: center;
     border-bottom: 1px dashed gray;
     margin: 4px;   
-    padding-top: 10px;   
 }
 
 
