--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,11 @@
     color: gray;
  }
 
+ body {
+    background: url('background.jpg') center no-repeat;
+    background-size: cover;
+    height: 870px;
+}
 
 
 
