--- a/app/assets/stylesheets/weekly.css
+++ b/app/assets/stylesheets/weekly.css
@@ -82,21 +82,20 @@ nav {
 }    
 
 .goals_panel, .priorities_panel {
-    background-color: #D5D4D4;
+    background-color: rgba(253, 253, 253, .4);
     margin: 10px;
     text-align: center; 
     display: flex;
     flex-direction: column;
     justify-content: space-between; 
     height: 380px;
-    box-shadow: 10px 5px 5px gray;
 }
 
 
 .work-to-do_panel, .personal-to-do_panel, .ideas_panel, .notes_panel {
     width: 25%;
     height: 200px;
-    background-color: #D5D4D4;
+    background-color: rgba(253, 253, 253, .5);
     margin: 10px;
     text-align: center;
     display: flex;
@@ -206,4 +205,9 @@ h4 a {
 
 .day_container {
     margin-left: 20px;  
+}
+
+
+#category_entries {
+    font-size: 15px;
 }
