--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -1,9 +1,3 @@
-body {
-    background: url('background.jpg') center no-repeat;
-    background-size: cover;
-    height: 870px;
-}
-
 
 h1 {
     font-size: 180px;
@@ -32,6 +26,7 @@ h3 {
 
 nav {
     text-align: right;
-    background-color: rgba(225, 224, 223);
+    background-color: rgb(225, 224, 223);
     height: 30px;
+    margin-top: -15px;
 }
