use image-url helper

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
  }
 
  body {
-    background: url('background.jpg') center no-repeat;
+    background: image-url('background.jpg') center no-repeat;
     background-size: cover;
     height: 870px;
 }
