--- a/app/assets/stylesheets/weekly.css
+++ b/app/assets/stylesheets/weekly.css
@@ -26,6 +26,7 @@ nav {
     flex-direction: column;
     width: 80%;
     height: 800px;
+    margin-left: 50px;
 }
 
 .right_panel-top {
@@ -49,6 +50,7 @@ nav {
 
 .week_of_panel {
     text-align: center;
+    height: 60px;
 }
 
 .current_week_panel {
@@ -59,6 +61,7 @@ nav {
 
 .left_arrow_panel, .right_arrow_panel {
     margin: 50px;
+    height: 60px;
 }
 
 .right_panel-top {
@@ -72,7 +75,7 @@ nav {
 }
 
 .sunday_panel, .monday_panel, .tuesday_panel, .wednesday_panel, .thursday_panel, .friday_panel, .saturday_panel {
-    width: 14.5%;
+    width: 220px;
     background-color: rgba(253, 253, 253, .5);
     text-align: center;
     margin: 3px;
@@ -83,12 +86,13 @@ nav {
 
 .goals_panel, .priorities_panel {
     background-color: rgba(253, 253, 253, .4);
-    margin: 10px;
+    margin-left: 50px;
+    margin-top: 20px;
     text-align: center; 
     display: flex;
     flex-direction: column;
     justify-content: space-between; 
-    height: 380px;
+    height: 350px;
 }
 
 
@@ -136,6 +140,11 @@ h2 {
     font-family: 'Cutive', serif;
 }   
 
+.week_of-text {
+    font-size: 20px;
+}
+
+
 h4 a {
     text-decoration: none !important;
     font-size: 30px;
@@ -143,8 +152,12 @@ h4 a {
 }
 
 .date_text {
-    font-size: 30px;
+    font-size: 20px;
     margin: 0 2px;
+}
+
+.current_date {
+    font-size: 20px;
 }
 
 .to {
@@ -181,6 +194,10 @@ h4 a {
     background-color: #EEECE8;   
 }
 
+.reflection_link {
+    font-size: 10px;
+}
+
 
 .days {
     margin-top: -2px;
@@ -210,4 +227,9 @@ h4 a {
 
 #category_entries {
     font-size: 15px;
+}
+
+.arrows {
+    margin-top: -35px;
+    font-size: 30px; 
 }
