--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'weekly.css' %>
 
 <nav>
-      <div>
+    <div>
       <% if current_user %>
         Welcome, <%= current_user.name %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
@@ -10,7 +10,8 @@
         <%= link_to 'Sign Up', new_user_path %>
       <% end %>
     </div>
-      </nav>
+</nav>
+
 <div class='flex-container'>
 
 
@@ -78,7 +79,7 @@
         <div class='right_panel-top'>
             <div class='top_right_panel-one'>
                 <div class='left_arrow_panel'>
-                    <h4>
+                    <h4 class='arrows'>
                     <%= link_to '<<<', entries_path(offset: @offset - 52) %>
                     &nbsp;&nbsp;
                     <%= link_to '<<', entries_path(offset: @offset - 4) %>
@@ -89,13 +90,13 @@
 
                 <div class='date_panel'>
                     <div class='week_of_panel'> 
-                        <h2> Week of </h2> 
+                        <h2 class='week_of-text'> Week of </h2> 
                         <hr>
                     </div>
 
                     <div class='current_week_panel'>
                         <div class='month_panel'>
-                            <h2> <%= @start_date.strftime("%B") %> </h2>
+                            <h2 class='current_date'> <%= @start_date.strftime("%B") %> </h2>
                         </div>
                         <div class='date_from_panel'>
                             <h2 class='current_date'> <%= @start_date.strftime("%d") %> </h2>
@@ -104,13 +105,13 @@
                         <h2 class='to'>to</h2>
                         &nbsp;&nbsp;&nbsp;
                         <div class='date_to_panel'>
-                            <h2> <%= @end_date.strftime("%d") %> </h2>
+                            <h2 class='current_date'> <%= @end_date.strftime("%d") %> </h2>
                         </div>
                     </div>
                 </div>
 
                 <div class='right_arrow_panel'>
-                    <h4>
+                    <h4 class='arrows'>
                     <%= link_to '>', entries_path(offset: @offset + 1) %>
                     &nbsp;&nbsp;
                     <%= link_to '>>', entries_path(offset: @offset + 4) %>
@@ -121,6 +122,7 @@
             </div>
 
             <div class='top_right_panel-two'>
+                <p class='reflection_link'><%= link_to 'Reflections', edit_reflection_path("#{@start_date}") %> </p>
             </div>
 
         </div>
@@ -141,7 +143,11 @@
                 
                 <div class='entries_panel-days'>
                     <% @mon.each do |e| %>
-                        <p class='link_tos'><%= e.content %> <%= link_to '✎', edit_entry_path(e, offset: @offset) %> <%= link_to '╳', entry_path(e, offset: @offset), method: :delete %> </p>
+                        <%= e.content %> 
+                        <p class='link_tos'>
+                        <%= link_to '✎', edit_entry_path(e, offset: @offset) %> 
+                        <%= link_to '╳', entry_path(e, offset: @offset), method: :delete %> 
+                        </p>
                     <% end %>
                 </div>
 
