--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,21 +1,27 @@
 <%= stylesheet_link_tag 'landing.css' %>
 
-      <nav> 
-      <div class='nav_content'>
-        <div class='log_in_panel'>
-          <p id="alert"><%= alert %></p>
-          <%= form_tag sessions_path do %>
-            <div class="field">
-              <%= label_tag :email %>
-              <%= text_field_tag :email, params[:email] %>
-            </div>
-            <div class="field">
-              <%= label_tag :password %> <%= password_field_tag :password %>
-            </div>
-            <div class="actions"><%= submit_tag "Log In" %></div>
-          <% end %>
-      </div>
-      
+
+  <nav> 
+    <div class='log_in_panel'>
+      <p id="alert"><%= alert %></p>
+      <%= form_tag sessions_path do %>
+        <div class="field">
+          <%= label_tag :email %>
+          <%= text_field_tag :email, params[:email] %>
+        </div>
+        <div class="field">
+          <%= label_tag :password %> <%= password_field_tag :password %>
+        </div>
+        <div class="actions"><%= submit_tag "Log In" %></div>
+      <% end %>
+
+          <div>
+            <%= link_to 'Sign Up', new_user_path %>
+          </div>
+  </nav>
+
+
 <h1> Planned. </h1>
 
 <h3> A goal without a plan is just a dream. </h3>
+
