--- a/app/assets/stylesheets/reflections.css
+++ b/app/assets/stylesheets/reflections.css
@@ -68,7 +68,7 @@ h1 {
     font-size: 10px;
 }
 
-.top_10_panel, .learnings_panel, .new_things_panel, .people_inspiration_panel, .improvements_panel, .progression_panel, .obstacles_panel, .wrongs_panel {
+/* .top_10_panel, .learnings_panel, .new_things_panel, .people_inspiration_panel, .improvements_panel, .progression_panel, .obstacles_panel, .wrongs_panel {
     height: 150px;
     border: 2px dashed black;
     margin-top: -9px;
@@ -76,9 +76,7 @@ h1 {
     margin-left: 50px;
     background-color: #EEECE8;
     width: 300px;
-
-
-}
+} */
 
 .category_panel {
     height: 30px;
@@ -105,4 +103,14 @@ h1 {
 .reflections_text {
     font-size: 40px;
     font-family: 'Dancing Script', cursive;
+}
+
+.reflection-input {
+    height: 150px;
+    border: 2px dashed black;
+    margin-top: -9px;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    background-color: #EEECE8;
+    width: 300px;
 }
